# cpp-bencode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  tests.cpp
include/: BadBencodeException.h  BencodeByteArray.h  BencodeDictionary.h  BencodeElement.h  BencodeList.h  BencodeNumber.h  ByteArray.h  Dictionary.h  Element.h  List.h  MarkupException.h  Number.h  TorrentFile.h  Utils.h
src/: BencodeByteArray.cpp  BencodeDictionary.cpp  BencodeElement.cpp  BencodeList.cpp  BencodeNumber.cpp  ByteArray.cpp  Dictionary.cpp  Element.cpp  List.cpp  Number.cpp  TorrentFile.cpp
